--- a/node-development/app/sass/framework/_utilities.sass
+++ b/node-development/app/sass/framework/_utilities.sass
@@ -189,6 +189,9 @@
 .bc-intro-paragraph
 	font-size: $text-01
 	font-weight: 300
-		
+.bc-intro-paragraph--minor
+	@extend .bc-intro-paragraph
+	font-size: $text-00
+	font-weight: 500
 	
 	
